# vig-init

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  euroc_data_stream.cpp  euroc_data_stream.h  keypoint_filter.h  main.cpp  opencv_image.cpp  opencv_image.h
src/: CMakeLists.txt  imu_initializer.cpp  imu_initializer.h  vig_initializer.cpp  vig_initializer.h
